# newpy

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/api/routes/: system.py
app/cli/: menu.py
app/tests/: sample_test.py
notebooks/: sample_notebook.ipynb
scripts/: alias_make_repo.sh  make_repo.sh  system_info.sh
src/: main.py
