[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "newypy"
version = "0.1.0"
description = "Fast python lab repo creator"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "asyncua>=1.1.8",
    "inquirerpy>=0.3.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
]

# EXTRAS
[project.optional-dependencies]

dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
    "loguru>=0.7.3",
    "black>=26.3.1",
]

api = [
    "uvicorn>=0.42.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
]

tools = [
    "sqlalchemy>=2.0.48",
    "matplotlib",
    "numpy",
    "streamlit",
    "pandas",
    "ipykernel",
    "inquirerpy>=0.3.4",
]
